--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Sub-Deferrable
 
+0.05    12/15/2012
+        Minor cleanup and kwalitee enhancements.
+
 0.04    10/27/2012
         Switch to Build.PL and add author tests.
 
